@@ -1,6 +1,6 @@
 /*******************************************************************************
  Jimm - Mobile Messaging - J2ME ICQ clone
- Copyright (C) 2003-04  Jimm Project
+ Copyright (C) 2003-05  Jimm Project
 
  This program is free software; you can redistribute it and/or
  modify it under the terms of the GNU General Public License
@@ -18,7 +18,7 @@
  ********************************************************************************
  File: src/jimm/comm/KeepAliveTimerTask.java
  Version: ###VERSION###  Date: ###DATE###
- Author(s): Manuel Linsmayer
+ Author(s): Manuel Linsmayer, Andreas Rossbacher
  *******************************************************************************/
 
 package jimm.comm;
@@ -33,11 +33,6 @@ import java.util.TimerTask;
 
 public class KeepAliveTimerTask extends TimerTask
 {
-
-
-	// Ping interval
-	public static final int ALIVE_INTERVAL = 120 * 1000; // milliseconds
-
 
 	// ICQ object
 	protected Icq icq;
