@@ -256,6 +256,7 @@ public class Text_EN extends ResourceBundle
 		resources.put("successful",                  "successful");
 		resources.put("sysnotice",					 "System Notice");
 		resources.put("text_too_long",               "Text too long to be inserted");
+        resources.put("timeout_interv",              "Keepalive packet interval");
 		resources.put("title",                       "Title");
 		resources.put("traffic",                     "Traffic");
 		resources.put("uin",                         "UIN");
